# newtype-proxy

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs
test/: Cargo.toml
test/src/: lib.rs
