[package]
name = "newtype-proxy"
version = "0.1.0"
authors = ["Bodil Stokke <bodil@bodil.org>"]
license = "LGPL-3.0+"
description = "Automatic deriving of `From` and `Deref` for Rust newtype structs"
repository = "https://github.com/bodil/newtype-proxy"
documentation = "https://docs.rs/newtype-proxy/"
readme = "README.md"
categories = ["rust-patterns"]
keywords = ["newtype"]

[lib]
proc-macro = true

[dependencies]
syn = "0.11.11"
quote = "0.3.15"
